package maidsafe.nfs.protobuf;

message PersonaId {
  required int32 persona = 1;
  required bytes node_id = 2;
}
